# SumoSpace

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dry_run_fail.txt  fixes_and_ideas.md  full_suite_final.txt  full_suite_final_2.txt  full_suite_final_3.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_output.txt  test_verification.sh  verify_all.py
.github/workflows/: ci.yml  publish.yml
.sumo_audit/: audit_20260502.jsonl  stats_index.json
.sumo_desktop_db/users/desktop_agent/: registry.json
.sumo_desktop_db/users/desktop_agent/sessions/3cd3cea885df.db/: chroma.sqlite3
.sumo_desktop_db/users/desktop_agent/sessions/d992bd427087.db/: chroma.sqlite3
.sumo_image_db/: chroma.sqlite3
architecture/: index.html
benchmark_results/: README.md  benchmark_20260506_004754.json  benchmark_20260506_004754.md
benchmarks/: index.html  run_benchmark.py
docs/: architecture.md  benchmarks.md  changelog.md  contributing.md  hooks.md  index.md
docs/concepts/: committee.md  pipeline.md  presets.md
docs/getting-started/: configuration.md  first-agent.md  installation.md  quickstart.md
docs/guides/: multi-user.md
docs/javascripts/: extra.js
docs/reference/: cli.md  exceptions.md  kernel.md  settings.md
docs/stylesheets/: extra.css
examples/: 01_quickstart.py  02_custom_hooks.py  03_advanced_telemetry.py  04_multi_user_server.py  code_refactor.py  image_search_app.py  repo_manager.py
examples/desktop_agent/: README.md  __init__.py  agent.py  app.py  desktop_tools.py
examples/sumofinance/: README.md  api.py  app.py  auth.py  db.py  debug_chat.py  debug_chat2.py  debug_chat3.py  finance_kernel.py  mock_aa_data.py  requirements.txt  seed_data.py  seed_schemes.py  sumofinance.db  tools.py
getting-started/: index.html
hooks/: index.html
media/: index.html
providers/: index.html
rollback/: index.html
search/: search_index.json
sumospace/: __init__.py  audit.py  cache.py  classifier.py  cli.py  committee.py  config.py  embedders.py  exceptions.py  hooks.py  ingest.py  kernel.py  media_ingest.py  media_search.py  memory.py  providers.py  rag.py  scope.py  scraper.py  settings.py  snapshots.py  telemetry.py  templates.py  tools.py
sumospace/adapters/: __init__.py  langchain.py
sumospace/benchmarks/: __init__.py  report.py  runner.py  standalone.py  tasks.py
sumospace/benchmarks/fixtures/sample_project/: README.md  auth.py  buggy.py  database.py  dead_code.py  requirements.txt  sync_io.py  utils.py
sumospace/loaders/: __init__.py  github.py  web.py  youtube.py
sumospace/multimodal/: __init__.py  audio.py  video.py
sumospace/utils/: tokens.py
sumospace/vectorstores/: __init__.py  base.py  chroma.py  faiss.py  pgvector.py  qdrant.py
tests/: conftest.py  test_audit.py  test_benchmarks.py  test_cache.py  test_classifier.py  test_committee.py  test_committee_toggle.py  test_concurrency.py  test_error_recovery.py  test_hooks.py  test_hooks_integration.py  test_ingest.py  test_kernel.py  test_langchain_adapter.py  test_loaders.py  test_media.py  test_memory.py  test_multi_query.py  test_plugin_tools.py  test_presets.py  test_providers.py  test_rag.py  test_scope.py  test_settings.py  test_snapshots.py  test_telemetry.py  test_templates.py  test_tools.py  test_truncation.py  test_vectorstores.py
tools/: index.html
vector-stores/: index.html
