[project]
name = "sumospace"
version = "0.1.0"
description = "A modular, auto-everything multi-agent execution environment"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Omdeep", email = "omdeep@sumospace.dev" }]
keywords = ["agents", "llm", "rag", "multimodal", "mlops", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── CORE — zero API keys, works offline ───────────────────────────────────────
dependencies = [
    # Vector store (local, no server needed)
    "chromadb>=0.5.0",

    # Default embeddings — fully local, no API key
    "sentence-transformers>=3.0.0",   # BAAI/bge-base-en-v1.5, cross-encoder

    # Default LLM — HuggingFace local inference
    "huggingface-hub>=0.23.0",
    "transformers>=4.42.0",
    "accelerate>=0.31.0",
    "torch>=2.3.0",                   # needed for local HF models

    # HTTP (for DuckDuckGo fallback search, Ollama, no-auth requests)
    "httpx>=0.27.0",

    # Core utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "aiofiles>=23.2.0",
    "numpy>=1.26.0",

    # Ollama client — free local inference, no key, optional server
    "ollama>=0.2.0",

    # File locking for scope manager
    "filelock>=3.12",
]

[project.optional-dependencies]

# ── Local model inference (bitsandbytes for 4-bit quantization) ───────────────
# pip install sumospace[local]
local = [
    "bitsandbytes>=0.43.0",
    "scipy>=1.13.0",
]

# ── Cloud providers (opt-in, each requires their own API key) ─────────────────
# pip install sumospace[gemini]
gemini = [
    "google-generativeai>=0.7.0",
]

# pip install sumospace[openai]
openai = [
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
]

# pip install sumospace[anthropic]
anthropic = [
    "anthropic>=0.28.0",
]

# pip install sumospace[cloud]   ← installs all three cloud providers
cloud = [
    "sumospace[gemini]",
    "sumospace[openai]",
    "sumospace[anthropic]",
    "tiktoken>=0.7.0",
]

# ── Modality extras (all local, no API keys) ──────────────────────────────────
# pip install sumospace[code]
code = [
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-cpp>=0.22.0",
    "pygments>=2.18.0",
]

# pip install sumospace[pdf]
pdf = [
    "pypdf>=4.2.0",
    "pdfplumber>=0.11.0",
]

# pip install sumospace[audio]    ← uses local Whisper, no API key
audio = [
    "openai-whisper>=20231117",
    "torchaudio>=2.3.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
]

# pip install sumospace[video]
video = [
    "opencv-python-headless>=4.10.0",
    "pillow>=10.3.0",
    "imageio>=2.34.0",
    "ffmpeg-python>=0.2.0",
    "sumospace[audio]",
]

# pip install sumospace[browser]
browser = [
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.12.1",
    "lxml>=5.2.0",
]

# pip install sumospace[all]
all = [
    "sumospace[local]",
    "sumospace[code]",
    "sumospace[pdf]",
    "sumospace[audio]",
    "sumospace[video]",
    "sumospace[browser]",
]

# pip install sumospace[all-cloud]  ← everything including cloud providers
all-cloud = [
    "sumospace[all]",
    "sumospace[cloud]",
]

# pip install sumospace[dev]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
sumo = "sumospace.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sumospace"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
