[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sumospace"
version = "0.1.0"
description = "A locally-first, multi-agent autonomous task execution framework with zero cloud dependencies."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Omdeep Borkar", email = "omdeep@example.com" }
]
keywords = [
    "ai", "agents", "llm", "autonomous", "local-inference",
    "multi-agent", "rag", "ollama", "vllm", "huggingface",
    "langchain-alternative", "task-automation", "agentic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24",
    "typer>=0.9",
    "rich>=13.0",
    "chromadb>=0.4.0",
    "filelock>=3.12",
    "opentelemetry-api>=1.20",
    "watchdog>=3.0",
    "jinja2>=3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
local = [
    "torch>=2.0",
    "transformers>=4.35",
    "sentence-transformers>=2.2",
    "accelerate>=0.24",
]
ollama = [
    "httpx>=0.24",  # already core, listed for clarity
]
vllm = [
    "vllm>=0.4.0",
]
telemetry = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
cloud = [
    "google-generativeai>=0.3",
    "openai>=1.0",
    "anthropic>=0.20",
]
desktop = [
    "pyautogui>=0.9",
    "pillow>=10.0",
]
media = [
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "transformers>=4.35",
    "openai-whisper>=20231117",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "librosa>=0.10",
    "soundfile>=0.12",
]
media-fast = [
    "sumospace[media]",
    "faster-whisper>=0.10",
]
all = [
    "sumospace[local,telemetry,cloud,desktop,media]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "twine>=4.0",
    "hatch>=1.7",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Omdeepb69/SumoSpace"
Documentation = "https://omdeepb69.github.io/SumoSpace"
Repository = "https://github.com/Omdeepb69/SumoSpace"
"Bug Tracker" = "https://github.com/Omdeepb69/SumoSpace/issues"
Changelog = "https://github.com/Omdeepb69/SumoSpace/blob/main/CHANGELOG.md"

[project.scripts]
sumo = "sumospace.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sumospace"]

[tool.hatch.build.targets.sdist]
include = [
    "sumospace/",
    "examples/",
    "tests/",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    ".sumo_db/",
    "*.pyc",
    "__pycache__/",
    ".env",
    "walkthrough.md",
    "task.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real LLM (deselect with '-m not integration')",
    "slow: marks slow tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["sumospace"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
